[tool.poetry]
name = "jujulnav"
version = "0.1.0"
description = "A script to look at logs from multiple Juju units"
authors = ["Nicolas Bock <nicolas.bock@canonical.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
