[tool.poetry]
name = "jujulnav"
version = "0.1.0"
description = "A script to look at logs from multiple Juju units"
authors = ["Nicolas Bock <nicolas.bock@canonical.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
bashate = "^2.1.1"
pylint = "^3.3.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
juju-lnav = "jujulnav.main:main"
